--- a/config.json
+++ b/config.json
@@ -30,7 +30,7 @@
             "enabled": "1"
         },
         "CB01": {
-            "url": "https://cb01net.stream",
+            "url": "https://cb01net.org",
             "CB_PROXY": "1",
             "CB_ForwardProxy": "0",
             "MX_ForwardProxy": "0",
@@ -84,7 +84,7 @@
         "load_env": "0",
         "HOST": "0.0.0.0",
         "PORT": "8080",
-        "Name": "MammaMia",
+        "Name": "MammaMiaa",
         "Icon": "🍕️",
         "Public_Instance": "0",
         "Remote_Instance": "1",
