--- a/config.json
+++ b/config.json
@@ -48,7 +48,7 @@
             "enabled": "1"
         },
         "Guardaserie": {
-            "url": "https://guardaserietv.live",
+            "url": "https://guardaserietv.top",
             "enabled": "1",
             "GS_ForwardProxy": "0",
             "GS_PROXY": "1"
@@ -72,7 +72,7 @@
             "AW_PROXY": "1"
         },
         "SkyStreaming": {
-            "url": "https://skystreaming.asia",
+            "url": "https://skystreaming.download",
             "enabled": "1"
         },
         "DaddyLiveHD": {
