--- a/config.json
+++ b/config.json
@@ -84,7 +84,7 @@
         "load_env": "0",
         "HOST": "0.0.0.0",
         "PORT": "8080",
-        "Name": "MammAnna",
+        "Name": "MammaMia",
         "Icon": "🍕️",
         "Public_Instance": "0",
         "Remote_Instance": "1",
