--- a/config.json
+++ b/config.json
@@ -30,7 +30,7 @@
             "enabled": "1"
         },
         "CB01": {
-            "url": "https://cb01net.life",
+            "url": "https://cb01net.digital",
             "CB_PROXY": "1",
             "CB_ForwardProxy": "0",
             "MX_ForwardProxy": "0",
@@ -48,7 +48,7 @@
             "enabled": "1"
         },
         "Guardaserie": {
-            "url": "https://guardaserietv.blog",
+            "url": "https://guardaserietv.icu",
             "enabled": "1",
             "GS_ForwardProxy": "0",
             "GS_PROXY": "1"
