--- a/config.json
+++ b/config.json
@@ -66,7 +66,7 @@
             "OST_PROXY": "0"
         },
         "AnimeWorld": {
-            "url": "https://onlineserietv.com",
+            "url": "www.animeworld.ac",
             "enabled": "1",
             "AW_ForwardProxy": "0",
             "AW_PROXY": "0"
