--- a/config.json
+++ b/config.json
@@ -13,9 +13,9 @@
             "enabled": "1"
         },
         "Tantifilm": {
-            "url": "https://www.tantifilm.food",
+            "url": "https://www.tanti.bond",
             "TF_ForwardProxy": "0",
-            "TF_PROXY": "0",
+            "TF_PROXY": "1",
             "enabled": "1"
         },
         "Mysterius": {
@@ -30,8 +30,8 @@
             "enabled": "1"
         },
         "CB01": {
-            "url": "https://cb01net.live",
-            "CB_PROXY": "0",
+            "url": "https://cb01net.download",
+            "CB_PROXY": "1",
             "CB_ForwardProxy": "0",
             "MX_ForwardProxy": "0",
             "MX_PROXY": "0",
@@ -40,24 +40,24 @@
         "DDLStream": {
             "url": "https://ddlstreamitaly.co",
             "cookies": {
-                "ips4_device_key": "e76de2d09214c678fa18e317e1aab74b",
-                "ips4_IPSSessionFront": "a43ab7f014e10d61c58412c436b2018b",
-                "ips4_member_id": "4030150",
-                "ips4_login_key": "5cb83aeddd61ee9dc9d8727726cabc94"
+                "ips4_device_key": "4d593f81e70b49c0dbe21631c43d7c89",
+                "ips4_IPSSessionFront": "6b5fc4a527677121f0b9830167fe1062",
+                "ips4_member_id": "4030426",
+                "ips4_login_key": "735a7725fe58068c32b5b85546290525"
             },
             "enabled": "1"
         },
         "Guardaserie": {
-            "url": "https://guardaserietv.lat",
+            "url": "https://guardaserietv.blog",
             "enabled": "1",
             "GS_ForwardProxy": "0",
-            "GS_PROXY": "0"
+            "GS_PROXY": "1"
         },
         "GuardaHD": {
             "url": "https://guardahd.stream",
             "enabled": "1",
             "GH_ForwardProxy": "0",
-            "GH_PROXY": "0"
+            "GH_PROXY": "1"
         },
         "Onlineserietv": {
             "domain": "com",
@@ -66,13 +66,13 @@
             "OST_PROXY": "0"
         },
         "AnimeWorld": {
-            "url": "https://onlineserietv.com",
+            "url": "https://www.animeworld.ac",
             "enabled": "1",
             "AW_ForwardProxy": "0",
-            "AW_PROXY": "0"
+            "AW_PROXY": "1"
         },
         "SkyStreaming": {
-            "url": "https://www.animeworld.ac",
+            "url": "https://skystreaming.stream",
             "enabled": "1"
         },
         "DaddyLiveHD": {
@@ -84,7 +84,7 @@
         "load_env": "0",
         "HOST": "0.0.0.0",
         "PORT": "8080",
-        "Name": "MammaMia",
+        "Name": "MammAnna",
         "Icon": "🍕️",
         "Public_Instance": "0",
         "Remote_Instance": "1",
